ScaleGestureDetector: change metric for minScalingSpan
The span caculated by the default metric 'mm' is far beyond a normal value

Change-Id: I19a3588d4c8b546c271206fd49c940406f511b4f

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1799,7 +1799,7 @@
          For best results, care should be taken such that this value remains
          larger than the minimum reported touchMajor/touchMinor values
          reported by the hardware. -->
-    <dimen name="config_minScalingSpan">27mm</dimen>
+    <dimen name="config_minScalingSpan">27dp</dimen>
 
     <!-- Minimum accepted value for touchMajor while scaling. This may be tuned
          per-device in overlays. -->
