SettingsLib:   Maximum density scale. The actual scale used depends on the device. We can change this value by overlay config_max_density_scale config.
Change-Id: If947edf9eca78abd26e2d83a261452788a4fd206

--- a/packages/SettingsLib/res/values/config.xml
+++ b/packages/SettingsLib/res/values/config.xml
@@ -26,6 +26,9 @@
     <!-- Whether to send a custom package name with the PSD.-->
     <bool name="config_sendPackageName">false</bool>
 
+    <!-- Maximum density scale. The actual scale used depends on the device..-->
+    <string name="config_max_density_scale" format="float" type="dimen">1.5</string>
+
     <!-- Name for the set of keys associating package names -->
     <string name="config_helpPackageNameKey" translatable="false"></string>
 
