values-sw600dp: change metric for minScalingSpan
The span caculated by the default metric 'mm' is far beyond a normal value

Change-Id: Ib59c34d906071ce707b0634f2a17a4d90e4b477c

--- a/core/res/res/values-sw600dp/config.xml
+++ b/core/res/res/values-sw600dp/config.xml
@@ -38,7 +38,7 @@
     <integer name="config_maxResolverActivityColumns">3</integer>
 
     <!-- Use a larger scaling span for larger screen devices. -->
-    <dimen name="config_minScalingSpan">32mm</dimen>
+    <dimen name="config_minScalingSpan">32dp</dimen>
 
     <integer name="config_dockedStackDividerSnapMode">1</integer>
 </resources>
