add volume down/up and screenshot button on navigation bar
Signed-off-by: alex.lin <alex.lin@rock-chips.com>
Change-Id: Id9e3f55b8846d5cf4974504729a57651e9279034

--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -321,4 +321,7 @@
 
     <!-- Whether vibrate icon is shown in the status bar by default. -->
     <integer name="def_statusBarVibrateIconEnabled">0</integer>
+
+    <!-- should show the screenshot button default -->
+    <integer name="def_screenshot_button_show">0</integer>
 </resources>
