--- a/packages/SystemUI/res/values-sw600dp-land/dimens.xml
+++ b/packages/SystemUI/res/values-sw600dp-land/dimens.xml
@@ -77,4 +77,7 @@
     <dimen name="lockscreen_shade_keyguard_transition_vertical_offset">83dp</dimen>
 
     <dimen name="notification_panel_margin_horizontal">24dp</dimen>
+
+    <dimen name="navigation_key_width">120dp</dimen>
+    <dimen name="navigation_key_padding">50dp</dimen>
 </resources>
