SystemUI: lock screen and status bar can display am or pm
Change-Id: I8a093b0ac7e486b71533833aa9325cb65476ddde
Signed-off-by: wh <wanghang@rock-chips.com>

--- a/packages/SystemUI/customization/res/values/donottranslate.xml
+++ b/packages/SystemUI/customization/res/values/donottranslate.xml
@@ -16,7 +16,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Skeleton string format for displaying the time in 12-hour format. -->
-    <string name="clock_12hr_format">hm</string>
+    <string name="clock_12hr_format">ahm</string>
 
     <!-- Skeleton string format for displaying the time in 24-hour format. -->
     <string name="clock_24hr_format">Hm</string>
