cec: add aml feature of hdmi cec [1/1]
PD#SWPL-149670

Problem:
There are issues related with routing control and
arc etc.

Solution:
1.Port the modifications in SWPL-133828.
Add portions and optimizations related with power control,
standby mode, tv status observation, CTS modifications and
TV's arc related functions etc.
2.Adding fixes including SWPL-153107,SWPL-162181,SWPL-161590,
SWPL-154908,SWPL-155706,SWPL-157612,SWPL-153498,SWPL-158554,
SWPL-155737,SWPL-152018,SWPL-165294,SWPL-165025,SWPL-165168.

Verify:
t7c

Change-Id: I3409aa73018df20a46731586821f7dc31b7e7eb5
Signed-off-by: an.xi <an.xi@amlogic.com>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -6053,6 +6053,16 @@
     <bool name="config_earcFeatureDisabled_allowed">true</bool>
     <bool name="config_earcFeatureDisabled_default">false</bool>
 
+    <!-- Comatibility Cec Configuration -->
+    <bool name="config_cecUseAndroidVolumeBar">false</bool>
+    <bool name="config_cecSendStandbyNoneActive">false</bool>
+    <bool name="config_cecSendInactiveSource">false</bool>
+    <bool name="config_cecBootOneTouchPlay">true</bool>
+    <bool name="config_cecSuspendedByAutoDeviceOff">false</bool>
+    <bool name="config_cec_hdmiFullVolume">true</bool>
+    <bool name="config_cec_showPassthroughWarningAlways">false</bool>
+    <integer name="config_cec_passthroughMode">0</integer>
+
     <!-- Whether app hibernation deletes OAT artifact files as part of global hibernation. -->
     <bool name="config_hibernationDeletesOatArtifactsEnabled">true</bool>
 
