BDS: SystemUI keeps crashing on Vertical screen
PD#SWPL-101623

Problem:
if Vertical screen, no resource for tv_volume_icons_size

Solution:
config it

Verify:
T7C

Change-Id: Ibcc0790bfa2220f015ed28557a1dd369109ac591
Signed-off-by: Cheng Wang2 <cheng.wang2@amlogic.com>

--- a/packages/SystemUI/res/values-television/dimens.xml
+++ b/packages/SystemUI/res/values-television/dimens.xml
@@ -57,6 +57,8 @@
     <dimen name="privacy_chip_dot_bg_height">18dp</dimen>
     <dimen name="privacy_chip_dot_bg_radius">9dp</dimen>
 
+    <dimen name="tv_volume_icons_size">20dp</dimen>
+
     <dimen name="unblock_hw_sensor_icon_width">@dimen/bottom_sheet_icon_size</dimen>
     <dimen name="unblock_hw_sensor_icon_height">@dimen/bottom_sheet_icon_size</dimen>
 
