add config_rk_ebook and set view ScrollMode for ebook
Change-Id: I9b6636d03aa9468e794cbc5f5801fafbfc948e21

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -6596,4 +6596,8 @@
     <!-- Enables or disables the "Share" action item shown in the context menu that appears upon
         long-pressing on selected text. Enabled by default. -->
     <bool name="config_textShareSupported">true</bool>
+
+    <!-- ======rk code====== -->
+    <bool name="config_rk_ebook">false</bool>
+    <!-- =================== -->
 </resources>
