Custom API:Support custom api.
frameworks/base/[1/4]
kernel-5.10/[2/4]
device/khadas/rk3588/[3/4]
system/sepolicy/[3/4]

Change-Id: I6f00d4d3b62a1ccf8e71e529b2dfc3c00270e1de

--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -17,6 +17,7 @@
  */
 -->
 <resources>
+    <string name="def_null_string" translatable="false"></string>
     <bool name="def_dim_screen">true</bool>
     <integer name="def_screen_off_timeout">60000</integer>
     <integer name="def_sleep_timeout">-1</integer>
