brightness: hide backlight adjustment settings
Change-Id: I86046f2b345fde1bba6a40bfc55f97abb91bb9fa
Signed-off-by: Goenjoy Huang <goenjoy@khadas.com>

--- a/packages/SystemUI/res/layout/quick_settings_brightness_dialog.xml
+++ b/packages/SystemUI/res/layout/quick_settings_brightness_dialog.xml
@@ -35,5 +35,6 @@
             android:progressDrawable="@drawable/brightness_progress_drawable"
             android:splitTrack="false"
             android:clickable="true"
+            android:visibility="gone"
         />
     </com.android.systemui.settings.brightness.BrightnessSliderView>
